# agenticsa

./: .gitignore  CMakeLists.txt  Local Static Analysis.properties  MISRA C++ and CERT.properties  agenticsa.sh  goo.cpp  goo.h  goo_test.cpp
.codex/: config.toml
.github/workflows/: static_analysis.yml
.github/workflows/tools/: list_violated_rules.py
